name:                stevenw
version:             0.1.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            stevenw.info
license:             BSD3
license-file:        LICENSE
author:              Steven W
maintainer:          StevenW.info@gmail.com
copyright:           2016 Steven W
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

-- library
--   hs-source-dirs:      src
--   exposed-modules:     Lib
--   build-depends:       base >= 4.7 && < 5
--                      , hakyll
--   default-language:    Haskell2010

executable stevenw
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hakyll
  default-language:    Haskell2010

test-suite StevenW-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/StevenWInfo
